test/negative/function_pointer_to_auto_fn.cg
fn id(x: auto) -> auto { x }

fn main() -> i32 {
    let p: const* fn(i32) -> i32 = id as const* fn(i32) -> i32;
    p(0 as i32)
}

